--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -1,26 +1,24 @@
-version: "3.9"
+version: "3.6"
+
 services:
     api:
-        build: ../src
-        ports:
-            - "8000:80"
-        depends_on:
-            - db
-            - mq
-    db:
-        image: "mariadb:10.4"
-        restart: 'always'
-        volumes: 
-          - "/var/lib/mysql/data"
-          - "/var/lib/mysql/logs"
-          - /var/docker/mariadb/conf:/etc/mysql
-        environment:
-          MYSQL_ROOT_PASSWORD: "sa"
-          MYSQL_DATABASE: "locker"
-          MYSQL_USER: "sa"
-          MYSQL_PASSWORD: "locker"
-    mq:
-        image: "masstransit/rabbitmq"
+        image: api
+        build:
+            context: ../src
+            dockerfile: "SuperLocker.Api/Dockerfile"
+        network_mode: "host"
+
+    rabbitmq:
+        image: masstransit/rabbitmq:latest
         ports:
             - "5672:5672"
             - "15672:15672"
+            - "15692:15692"
+        healthcheck:
+            timeout: 5s
+            interval: 5s
+            retries: 10
+            test:
+                - "CMD"
+                - "rabbitmqctl"
+                - "status"
