--- a/src/SuperLocker.Core/SuperLocker.Core.csproj
+++ b/src/SuperLocker.Core/SuperLocker.Core.csproj
@@ -5,6 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="FluentValidation" Version="10.2.3" />
     <PackageReference Include="MassTransit.AspNetCore" Version="7.2.1" />
   </ItemGroup>
 
