--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -1,23 +1,20 @@
 version: "3.6"
 
 services:
-    # api:
-    #     image: api
-    #     build:
-    #         context: ../src
-    #         dockerfile: "SuperLocker.Api/Dockerfile"
-    #     network_mode: "host"
+    api:
+        image: api
+        build:
+            context: ../src
+            dockerfile: "SuperLocker.Api/Dockerfile"
+        network_mode: "host"
 
     db:
-        image: "mcr.microsoft.com/mssql/server"
-        hostname: sql-server
-        container_name: sql-server
-        ports:
-          - "1433:1433"
+        image: mariadb
         restart: always
         environment:
-            SA_PASSWORD: "ejK577bvXShfY8b8"
-            ACCEPT_EULA: "Y"
+          MYSQL_ROOT_PASSWORD: rpass
+        ports: 
+            - 3306:3306
 
     rabbitmq:
         image: masstransit/rabbitmq:latest
