--- a/src/SuperLocker.DataContext/SuperLocker.DataContext.csproj
+++ b/src/SuperLocker.DataContext/SuperLocker.DataContext.csproj
@@ -6,6 +6,7 @@
 
   <ItemGroup>
     <PackageReference Include="dapper" Version="2.0.90" />
+    <PackageReference Include="MySql.Data" Version="8.0.25" />
   </ItemGroup>
 
   <PropertyGroup>
