--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -1,15 +1,16 @@
 version: "3.6"
 
 services:
-    # api:
-    #     image: api
-    #     build:
-    #         context: ../src
-    #         dockerfile: "SuperLocker.Api/Dockerfile"
-    #     network_mode: "host"
+    api:
+        image: api
+        build:
+            context: ../src
+            dockerfile: "SuperLocker.Api/Dockerfile"
+        network_mode: "host"
 
     db:
         image: mariadb
+        restart: always
         environment:
           MYSQL_ROOT_PASSWORD: rpass
         ports: 
