--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -14,6 +14,8 @@ services:
           MYSQL_ROOT_PASSWORD: rpass
         ports: 
             - 3306:3306
+        volumes:
+          - ./init:/docker-entrypoint-initdb.d
 
     rabbitmq:
         image: masstransit/rabbitmq:latest
