--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -14,6 +14,12 @@ services:
           MYSQL_ROOT_PASSWORD: rpass
         ports: 
             - 3306:3306
+    
+    redis:
+        image: redis
+        container_name: cache
+        expose:
+            - 6379
 
     rabbitmq:
         image: masstransit/rabbitmq:latest
