added some more config

--- a/src/SuperLocker.Auth/appsettings.Development.json
+++ b/src/SuperLocker.Auth/appsettings.Development.json
@@ -5,5 +5,14 @@
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
     }
+  },
+  "OauthIssuer": "https://localhost:5004",
+  "RabbitMqEndpoint": "http://localhost:5372",
+  "Redis": {
+    "Endpoint": "http://localhost:5372",
+    "Instance":  "superlock_cache"
+  },
+  "Database": {
+    "Connection": "Server=localhost;Database=AppDBSuperLock;Uid=root;Pwd=rpass;"
   }
 }
