--- a/src/SuperLocker.Api/appsettings.Development.json
+++ b/src/SuperLocker.Api/appsettings.Development.json
@@ -5,5 +5,19 @@
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
     }
+  },
+  "Redis": {
+    "Password": "",
+    "AllowAdmin": false,
+    "Ssl": false,
+    "ConnectTimeout": 6000,
+    "ConnectRetry": 2,
+    "Hosts": [
+      {
+        "Host": "localhost",
+        "Port": "5372"
+      }
+    ],
+    "Database": 0
   }
 }
