--- a/src/SuperLocker.DataContext/SuperLocker.DataContext.csproj
+++ b/src/SuperLocker.DataContext/SuperLocker.DataContext.csproj
@@ -7,8 +7,11 @@
 
   <ItemGroup>
     <PackageReference Include="dapper" Version="2.0.90" />
+    <PackageReference Include="FluentValidation" Version="10.2.3" />
     <PackageReference Include="Microsoft.Extensions.Caching.StackExchangeRedis" Version="5.0.1" />
     <PackageReference Include="MySql.Data" Version="8.0.25" />
+    <PackageReference Include="StackExchange.Redis.Extensions.AspNetCore" Version="7.1.1" />
+    <PackageReference Include="StackExchange.Redis.Extensions.Newtonsoft" Version="7.1.1" />
   </ItemGroup>
 
   <PropertyGroup>
