--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -8,7 +8,6 @@ on:
 
 jobs:
   build:
-
     runs-on: ubuntu-20.04
     env:
         working-directory: ./src
@@ -25,6 +24,60 @@ jobs:
     - name: Build
       run: dotnet build --no-restore
       working-directory: ${{env.working-directory}}
-    - name: Test
-      run: dotnet test --no-build --verbosity normal
+   
+  UnitTest:
+    name: Unit Test
+    runs-on: ubuntu-20.04
+    env:
+        working-directory: ./Tests/UnitTests
+      
+    steps:
+    - uses: actions/checkout@v2
+    - name: Setup .NET
+      uses: actions/setup-dotnet@v1
+      with:
+        dotnet-version: 5.0.x
+    - name: Restore dependencies
+      run: dotnet restore
       working-directory: ${{env.working-directory}}
+    - name: Test
+      run: dotnet test
+      working-directory: ${{env.working-directory}}
+  
+  IntegrationTest:
+    name: Functional Test
+    runs-on: ubuntu-20.04
+    env:
+        working-directory: ./docker
+        test-directory: ./src/Tests/IntegrationTest
+      
+    steps:
+    - name: Fire Docker
+      run: docker-compnse up
+      working-directory: ${{env.working-directory}}
+    - name: Test
+      run: dotnet test
+      working-directory: ${{env.test-directory}}
+      
+  FunnctionalTest:
+    name: Unit Test
+    runs-on: ubuntu-20.04
+    env:
+        working-directory: ./src
+        test-directory: ./Tests/IntegrationTest
+      
+    steps:
+    - name: Fire Docker
+      run: docker-compnse up
+      working-directory: ${{env.working-directory}}
+    - uses: actions/checkout@v2
+    - name: Setup .NET
+      uses: actions/setup-dotnet@v1
+      with:
+        dotnet-version: 5.0.x
+    - name: Restore dependencies
+      run: dotnet restore
+      working-directory: ${{env.test-directory}}
+    - name: Test
+      run: dotnet test
+      working-directory: ${{env.test-directory}}
