--- a/src/Tests/FunctionalTests/SuperLocker.Functional.Tests.csproj
+++ b/src/Tests/FunctionalTests/SuperLocker.Functional.Tests.csproj
@@ -31,7 +31,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\SuperLocker.Api\SuperLocker.Api.csproj" />
+    <ProjectReference Include="..\..\SuperLocker.Api\SuperLocker.Api.csproj" />
   </ItemGroup>
 
 </Project>
