tweeking docker environment

--- a/src/SuperLocker.Api/appsettings.json
+++ b/src/SuperLocker.Api/appsettings.json
@@ -6,5 +6,19 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "Redis": {
+    "Password": "",
+    "AllowAdmin": false,
+    "Ssl": false,
+    "ConnectTimeout": 6000,
+    "ConnectRetry": 2,
+    "Hosts": [
+      {
+        "Host": "redis",
+        "Port": "5372"
+      }
+    ],
+    "Database": 0
+  }
 }
