--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -75,7 +75,7 @@ jobs:
     steps:
     - uses: actions/checkout@v2
     - name: Fire Docker
-      run: docker-compose up
+      run: docker-compose up -d
       working-directory: ${{env.working-directory}}
     - name: Sleep for 30 seconds
       uses: jakejarvis/wait-action@master
