--- a/src/SuperLocker.Api/appsettings.Development.json
+++ b/src/SuperLocker.Api/appsettings.Development.json
@@ -19,5 +19,15 @@
       }
     ],
     "Database": 0
+  },
+  "Database": {
+    "ConnectionString": "Server=db;Database=AppDBSuperLock;Uid=root;Pwd=rpass;"
+  },
+  "RabbitMq": {
+    "ConnectionString": "rabbitmq://localhost"
+  },
+  "Services": {
+    "Auth": "https://localhost:5003",
+    "Api": "https://localhost:5001"
   }
 }
