--- a/src/SuperLocker.Api/appsettings.json
+++ b/src/SuperLocker.Api/appsettings.json
@@ -15,10 +15,20 @@
     "ConnectRetry": 2,
     "Hosts": [
       {
-        "Host": "redis",
+        "Host": "localhost",
         "Port": "5372"
       }
     ],
     "Database": 0
+  },
+  "Database": {
+    "ConnectionString": "Server=db;Database=AppDBSuperLock;Uid=root;Pwd=rpass;"
+  },
+  "RabbitMq": {
+    "ConnectionString": "rabbitmq://localhost"
+  },
+  "Services": {
+    "Auth": "https://localhost:5003",
+    "Api": "https://localhost:5001"
   }
 }
