--- a/src/SuperLocker.Auth/SuperLocker.Auth.csproj
+++ b/src/SuperLocker.Auth/SuperLocker.Auth.csproj
@@ -11,6 +11,7 @@
     <PackageReference Include="dapper" Version="2.0.90" />
     <PackageReference Include="identityserver4" Version="4.1.2" />
     <PackageReference Include="Microsoft.Extensions.Caching.StackExchangeRedis" Version="5.0.1" />
+    <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.10.14" />
     <PackageReference Include="MySql.Data" Version="8.0.25" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="5.6.3" />
   </ItemGroup>
