--- a/src/SuperLocker.Api/appsettings.Development.json
+++ b/src/SuperLocker.Api/appsettings.Development.json
@@ -15,13 +15,13 @@
     "Hosts": [
       {
         "Host": "localhost",
-        "Port": "5372"
+        "Port": "6379"
       }
     ],
     "Database": 0
   },
   "Database": {
-    "ConnectionString": "Server=db;Database=AppDBSuperLock;Uid=root;Pwd=rpass;"
+    "ConnectionString": "Server=localhost;Database=AppDBSuperLock;Uid=root;Pwd=rpass;"
   },
   "RabbitMq": {
     "ConnectionString": "rabbitmq://localhost"
