--- a/src/Tests/FunctionalTests/SuperLocker.Functional.Tests.csproj
+++ b/src/Tests/FunctionalTests/SuperLocker.Functional.Tests.csproj
@@ -6,6 +6,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.5.0" />
+    <PackageReference Include="RestSharp" Version="106.11.7" />
     <PackageReference Include="SpecFlow.Plus.LivingDocPlugin" Version="3.9.5" />
 
     
