--- a/src/SuperLocker.Auth/appsettings.json
+++ b/src/SuperLocker.Auth/appsettings.json
@@ -8,6 +8,6 @@
   },
   "AllowedHosts": "*",
   "Database": {
-    "ConnectionString": "PROD_DB"
+    "ConnectionString": "Server=db;Database=AppDBSuperLock;Uid=root;Pwd=rpass;"
   }
 }
