--- a/src/SuperLocker.CommandHalder/SuperLocker.CommandHalder.csproj
+++ b/src/SuperLocker.CommandHalder/SuperLocker.CommandHalder.csproj
@@ -6,6 +6,7 @@
 
   <ItemGroup>
     <PackageReference Include="MassTransit.AspNetCore" Version="7.2.1" />
+    <PackageReference Include="MySql.Data" Version="8.0.25" />
   </ItemGroup>
 
   <PropertyGroup>
