--- a/src/SuperLocker.CommandHalder/SuperLocker.CommandHalder.csproj
+++ b/src/SuperLocker.CommandHalder/SuperLocker.CommandHalder.csproj
@@ -1,7 +1,8 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <ItemGroup>
-    <ProjectReference Include="..\SuperLocker.Core\SuperLocker.Core.csproj" />
+    <ProjectReference Include="..\SuperLocker.Application\SuperLocker.Application.csproj" />
+    <ProjectReference Include="..\SuperLocker.Domain\SuperLocker.Domain.csproj" />
   </ItemGroup>
 
   <ItemGroup>
@@ -11,6 +12,8 @@
 
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
+    <AssemblyName>SuperLocker.CommandHandler</AssemblyName>
+    <RootNamespace>SuperLocker.CommandHandler</RootNamespace>
   </PropertyGroup>
 
 </Project>
